typescript/checker/tests/conformance/scanner/ecmascript5/scannerNumericLiteral9.ts.stderr
error: Legacy decimal escape is not permitted in strict mode
 --> $DIR/tests/conformance/scanner/ecmascript5/scannerNumericLiteral9.ts:2:1
  |
2 | 009
  | ^^^

